--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.thymeleaf.cache=false
 
 #Mysql conexión
 spring.datasource.url=jdbc:mysql://localhost:3306/techshop
-spring.datasource.username=usuario_prueba
-spring.datasource.password=Usuar1o_Clave.
+spring.datasource.username=usuario_pru
+spring.datasource.password=Usuar1o_Cla.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
